<resources>
    <string name="app_name">Zalo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thi_t_l_p_h_s">Thiết lập hồ sơ</string>
    <string name="g_t_n_c_a_b_n">Nhập tên của bạn</string>
    <string name="vui_l_ng_t_t_n_c_a_b_n_v_m_t_h_nh_nh_h_s_t_y_ch_n">Vui lòng đặt tên của bạn và một hình ảnh hồ sơ tùy chọn</string>
    <string name="th_ng_tin_h_s">Thông tin hồ sơ</string>
    <string name="b_n_ang_ngh_g">Bạn đang nghĩ gì?</string>
    <string name="t_i_l_n">Tải lên</string>
    <string name="ch_n_nh">Chọn ảnh</string>
    <string name="ang_ho_t_ng">Đang hoạt động</string>
    <string name="your_name">Your name</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn...</string>
    <string name="x_c_minh">Xác Minh</string>
    <string name="nh_p_m_otp_x_c_minh_s_i_n_tho_i_c_a_b_n">Nhập mã OTP để xác minh số điện thoại của bạn.</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="x_c_minh_s_i_n_tho_i_c_a_b_n">Xác minh số điện thoại của bạn</string>
    <string name="zalo_s_g_i_tin_nh_n_sms_x_c_minh_s_i_n_tho_i_c_a_b_n">Zalo sẽ gửi tin nhắn SMS để xác minh số điện thoại của bạn.</string>
    <string name="nh_p_s_i_n_tho_i_c_a_b_n">Nhập số điện thoại của bạn</string>
    <string name="a_l_o">a l o</string>
    <string name="chatting_with_friends">Chatting with friends</string>
    <string name="z_a_l_o">Z A L O</string>
    <string name="chat_ti_n_l_i">Chat tiện lợi</string>
    <string name="tr_truy_n_th_t_v_i_ch_t_l_ng_n_nh_m_i_l_c_m_i_n_i">Trò truyện thật đã với chất lượng ổn định mọi lúc mọi nơi</string>
    <string name="b_t_u">Bắt Đầu</string>
    <string name="th_ng_tin">Thông tin</string>
    <string name="your_phone">your phone</string>
    <string name="day_of_birth">Day of Birth</string>
    <string name="adress">Adress</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="ng_y_sinh">Ngày sinh</string>
    <string name="your_id">Your ID</string>
    <string name="h_m_nay_b_n_th_n_o">Hôm nay bạn thế nào?</string>
    <string name="username">UserName</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="_14_00pm">14:00pm</string>
    <string name="ch_nh_s_a">Chỉnh sửa</string>
    <string name="n_i_dung">Nội dung</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="h_y">Hủy</string>
    <string name="tin_nh_n">Tin nhắn</string>
    <string name="danh_b">Danh bạ</string>
    <string name="nh_t_k">Nhật ký</string>
    <string name="c_nh_n">Cá nhân</string>
</resources>