<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_conner_16"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/textView_NoiDung"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_conner_topleft_topright"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ch_nh_s_a"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_NoiDung">

        <EditText
            android:id="@+id/edt_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:hint="@string/n_i_dung"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button_XacNhan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_white_conner_16"
            android:backgroundTint="@color/blue"
            android:padding="5dp"
            android:text="@string/x_c_nh_n"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_Huy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_white_conner_16"
            android:backgroundTint="@color/blue"
            android:text="@string/h_y"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>